# gltfViewer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
data/shaders/: pbr.vert
framework/: CMakeLists.txt  camera.hpp
framework/gltf/: model.cpp  model.h  render.cpp  render.h  textures.h
framework/gui/: render.cpp  render.h
framework/skybox/: skybox.cpp  skybox.h
framework/vulkan/: buffer.cpp  buffer.h  device.cpp  device.h  macros.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  texture2d.cpp  texture2d.h  texturecube.cpp  texturecube.h  utils.cpp  utils.h  window.cpp  window.h
platform/: CMakeLists.txt  filedialog.cpp  filedialog.h  keycodes.h  logger.h
src/: CMakeLists.txt  glTFViewer.cpp
